[tool.poetry]
name = "emojimon"
version = "0.1.0"
description = ""
authors = ["Fede <figus.federico@gmail.com>"]

[tool.poetry.scripts]
play = "emojimon:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
testfixtures = "^7.0.0"
coverage = "^6.4.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
